--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">BusyBox</string>
+    <string name="app_name" translatable="false">BusyBox (addon.d)</string>
     <string name="app_version">version %1$s</string>
     <string name="action_settings">Settings</string>
     <string name="action_help">Information</string>
